<resources>
    <string name="app_name">WeatherSample</string>
    <string name="tab_text_1">Today Weather</string>
    <string name="tab_text_2">Weather List</string>
    <string name="button">Button</string>
    <string name="user_name">User Name</string>
    <string name="signup">SignUp</string>
    <string name="signin_to_continue">SignIn to continue</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup_to_continue">SignUp to continue</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signin">SignIn</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_extra">Extra</string>
    <string name="title_activity_tab_test">TabActivityTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>