<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.LoginActivity"
            tools:ignore="ScrollViewSize">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_190sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/sunshine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing=".1"
                android:text="@string/signup_to_continue"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/logo"
                app:layout_constraintStart_toStartOf="@id/logo"
                app:layout_constraintTop_toBottomOf="@id/logo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/name"
                android:textColorHint="@color/drakgrey"
                app:boxStrokeColor="@color/grey"
                app:hintTextColor="#757575"
                app:layout_constraintTop_toBottomOf="@id/tv2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionGo"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/black_fade" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/email"
                android:textColorHint="@color/drakgrey"
                app:boxStrokeColor="@color/grey"
                app:endIconTint="@color/drakgrey"
                app:hintTextColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/lFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/black_fade" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/password"
                android:textColorHint="@color/drakgrey"

                app:boxStrokeColor="@color/grey"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/drakgrey"
                app:hintTextColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/lEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/black_fade" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loConPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/drakgrey"
                app:boxStrokeColor="@color/grey"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/drakgrey"
                app:hintTextColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/lPass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textColor="@color/black_fade" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/submit"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="@dimen/_55sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loConPass">

                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_two"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/goLogin"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_70sdp"
                android:gravity="center"
                android:letterSpacing=".1"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>





    </androidx.constraintlayout.widget.ConstraintLayout>
